fix: column sx with overflow

--- a/day-1/css/style.css
+++ b/day-1/css/style.css
@@ -24,7 +24,7 @@ img {
 }
 
 .main-container {
-    height: calc(100vh - 80px);
+    height: calc(100vh - 85px);
     display: flex;
 }
 
@@ -34,7 +34,7 @@ img {
     flex: 7;
 }
 
-.footer-menu {
+footer {
     height: 85px;
     background-color: #282828;
 }
@@ -61,10 +61,11 @@ img {
 .col-user {
     background-color: #000000;
     padding-left: 15px;
-    flex: 1;
     display: flex;
     flex-shrink: 0;
     flex-direction: column;
+    min-height: 0;
+    overflow: auto;
 }
 
 .user-menu {
